--- a/app/assets/css/parts/_controls.scss
+++ b/app/assets/css/parts/_controls.scss
@@ -4,6 +4,27 @@ header {
   flex-grow: 1;
 }
 
+.controls-wrapper {
+  min-height: 100vh;
+  min-width: 300px;
+  width: 25vw;
+  max-width: 420px;
+  overflow-x: hidden;
+  z-index: 99;
+  display: flex;
+  pointer-events: none;
+}
+
+.controls {
+  pointer-events: auto;
+  width: 100%;
+  background: $header-bg;
+  display: flex;
+  flex-direction: column;
+  color: $text-on-dark;
+  flex-grow: 1;
+}
+
 .header-bar {
   padding: .75em 0;
 
@@ -13,15 +34,40 @@ header {
   }
 }
 
+.header__content {
+}
+
 .domain-switch {
   border-bottom: 1px solid darken($header-bg, 5%);
   padding: .5em;
 
   .btn.btn.btn {
     color: $controls-btn-color;
-    //padding: 8px 15px;
     padding: 0.5em 0px;
   }
+}
+
+.controls-map {
+  box-shadow: inset 0 120px 50px -60px rgba(0, 0, 0, 0.75);
+  padding: $controls-padding .5em 1.5em $controls-padding;
+  background: center bottom no-repeat;
+  background-size: auto 20em;
+}
+
+.controls-map__content {
+  display: flex;
+  align-items: center;
+
+  > button.btn.btn.btn {
+    color: #aaa;
+    margin: 0;
+  }
+}
+
+.controls-map__title {
+  flex-grow: 1;
+  color: #ccc;
+  font-size: 1em;
 }
 
 .ad {
