--- a/app/assets/css/parts/_title-bar.scss
+++ b/app/assets/css/parts/_title-bar.scss
@@ -1,26 +1,12 @@
 .title-bar {
-  background: center center no-repeat;
-  background-size: cover;
   box-shadow: inset 0 -150px 50px -80px rgba(0, 0, 0, .75);
-}
-
-.title-bar__map {
-  padding: $controls-padding * 1.25;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-family: 'Roboto Condensed';
-  font-size: .8em;
-  text-shadow:  0 0 3px rgba(0, 0, 0, 1), 0 0 5px rgba(0, 0, 0, 1);
-  opacity: .9;
-
-  .highlight {
-    color: white;
-  }
+  background: center top no-repeat;
+  background-size: auto 20em;
 }
 
 .title-bar__content {
   padding: $controls-padding;
-  padding-top: 9em;
+  padding-top: 6em;
   padding-bottom: 1.7em;
   display: flex;
   align-items: center;
