--- a/app/assets/css/main/_layout.scss
+++ b/app/assets/css/main/_layout.scss
@@ -15,6 +15,27 @@
   overflow-y: auto;
 }
 
+.controls-wrapper {
+  min-height: 100vh;
+  min-width: 300px;
+  width: 25vw;
+  max-width: 420px;
+  overflow-x: hidden;
+  z-index: 99;
+  display: flex;
+  pointer-events: none;
+}
+
+.controls {
+  pointer-events: auto;
+  width: 100%;
+  background: $header-bg;
+  display: flex;
+  flex-direction: column;
+  color: $text-on-dark;
+  flex-grow: 1;
+}
+
 .content {
   min-height: 100vh;
   flex-grow: 1;
